# game-template

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  project.hiber3d  test.js  tsconfig.tsbuildinfo  vite.config.ts
assets/: jsconfig.json  main.scene  tutorial.md  waypoint.glb
assets/glbs/: Capsule.glb  Cube.glb  Cylinder.glb  Floor.glb  Floor_400x400.glb  Pillar_A.glb  Pillar_B.glb  Pipe.glb  Pipe_turn.glb  Plane.glb  Sphere.glb  Stairs_A.glb  Stairs_B.glb  Torus.glb  Triangle.glb  Tube.glb  Wall.glb  Wall_400x400.glb  Wall_Door.glb  Wall_Door_400x400.glb  Wall_Window.glb  Wall_Window_400x400.glb  Wedge.glb  Wedge_Corner_A.glb  Wedge_Corner_B.glb  Wedge_Triangle.glb  cube.glb  cylinder.glb  plane.glb  spaceship.glb
assets/materials/: BasicPaint.material  Concrete.material  Glass.material  Grass.material  Hexagon.material  Hiber3DGrid.material  MetalMesh.material  Planks.material  Rock.material  StoneTiles.material  Wood.material  bullet.material  enemyBullet.material  plane.material
assets/scenes/: Bullet.scene  Enemy.scene  EnemyBullet.scene  Gun.scene  Player.scene  Wall.scene  bullet.scene  cube.scene  cubes.scene  enemy.scene  ground.scene  gun.scene  plane-piece.scene  plane.scene  spheres.scene
assets/scripts/: bullet-with-physics.js  bullet.js  ccScale.js  followplayer.js  generateArena.js  gun.js  hiber3d.d.ts  keyboardmovement.js  movement.js  playerManager.js  rotate.js  rotateship.js  script.d.ts  setBulletOwner.js  setLight.js  setName.js  setTransform.js  spawnpoint.js  ui.js
assets/ui/: ammo.rml  gun.rml
build_scripts/: compile.cjs  emscripten.sh  generate_project.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Hiber3D.tsx
game/: .clang-format  .gitignore  CMakeLists.txt  Main.cpp
game/Example/: ExampleEvents.hpp  ExampleModule.cpp  ExampleTypes.hpp
game/ExampleModule/: ExampleModule.cpp
game/Gun/: GunEvents.hpp  GunModule.cpp  GunModule.hpp  GunTypes.hpp
game/Midi/: MidiModule.cpp  MidiTypes.hpp
game/Modules/ExampleModule/: ExampleEvent.hpp  ExampleModule.cpp  ExampleModule.hpp
game/src/: Defines.hpp  Main.cpp
game/src/Modules/: ExampleEvent.hpp  ExampleModule.cpp
scripts/: emscripten.sh
web/: App.tsx  hiber3d.ts  index.css  main.tsx
web/hiber3d/components/: Hiber3D.tsx
web/hiber3d/context/: ApiContext.ts  Hiber3DContext.ts
web/hiber3d/hooks/: useAPI.ts  useHiber3D.ts
web/server/: package-lock.json
web/server/src/rooms/: MyRoom.ts
web/server/src/rooms/schema/: MyRoomState.ts
